--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dev_dependencies:
 flutter:
 assets:
     - assets/labels.txt
-    - assets/model_unquant.tflite
+    - assets/classify_brand.tflite
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
